--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software engineer student studying at the University of Adelaide</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born in Townsville, North Queensland</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Sports, mainly Cricket and anything Racing related</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything regarding software development, but mainly cyber-security</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Adelaide, South Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The idea of being able to share and see my work from anywhere in the world at anytime seems amazing</p>
     </section>
 
     <footer id="footer">
